--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,11 +32,11 @@ body {
 
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: rgb(224, 224, 224);
+    background-color: white;
     border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #0067cc;
+    background-color: black;
     border-radius: 10px;
 }
